bk_ida/gccida/c3/consec_sets_giv
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7375:4: error: expected ';' after expression
rtx v25; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7375:5: error: use of undeclared identifier 'v25'
rtx v25; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7377:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7377:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7382:1: error: use of undeclared identifier 'induction_1'
induction_1 *v32; // rcx 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7382:14: error: use of undeclared identifier 'v32'
induction_1 *v32; // rcx 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7383:4: error: expected ';' after expression
rtx src_rega; // [rsp+0h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7383:5: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
rtx src_rega; // [rsp+0h] [rbp-40h] BYREF 
    ^~~~~~~~
    src_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7384:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+8h] [rbp-38h] 
^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7384:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+8h] [rbp-38h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7388:1: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
src_rega = src_reg; 
^~~~~~~~
src_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7395:5: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
*( &src_rega - 20) = src_reg; 
    ^~~~~~~~
    src_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7396:5: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
*( &src_rega - 14) = *mult_val; 
    ^~~~~~~~
    src_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7397:5: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
*( &src_rega - 13) = *add_val; 
    ^~~~~~~~
    src_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7398:16: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
*( ( _DWORD *)&src_rega - 24) = first_benefit; 
               ^~~~~~~~
               src_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7399:15: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
*( ( _WORD *)&src_rega - 38) = 0; 
              ^~~~~~~~
              src_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7400:14: error: expected expression
*( ( _OWORD *)&src_rega - 4) = 0LL; 
             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7400:6: error: use of undeclared identifier '_OWORD'
*( ( _OWORD *)&src_rega - 4) = 0LL; 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7400:16: error: use of undeclared identifier 'src_rega'; did you mean 'src_reg'?
*( ( _OWORD *)&src_rega - 4) = 0LL; 
               ^~~~~~~~
               src_reg
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/loop.c:7356:5: note: 'src_reg' declared here
rtx src_reg, 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/consec_sets_giv/src/obj/loop.o] Error 1
